<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.view.MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:background="?android:attr/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:elevation="0dp"
        android:background="@drawable/app_bar_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="?attr/colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_label_weight"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_label_height"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/til_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate" />

        <Button
            android:id="@+id/btn_clear"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/btn_clean"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_imc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_imc_label"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_imc_label">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_imc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imc_no_value"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_imc_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_imc_value"
                android:text="@string/imc_message" />

            <LinearLayout
                android:id="@+id/imc_bar_container"
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_corner"
                android:clipToOutline="true"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_imc_message" />

            <View
                android:id="@+id/imc_indicator"
                android:layout_width="10dp"
                android:layout_height="35dp"
                android:translationY="5dp"
                android:background="@drawable/line_indicator"
                app:layout_constraintBottom_toTopOf="@id/imc_bar_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imc_bar_container" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="32dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_imc"
        android:text="@string/imc_disclaimer"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>